--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,53 @@
+[build-system]
+build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+
 [tool.isort]
 profile = "black"
+
+[tool.poetry]
+authors = ["The Palace Project <info@thepalaceproject.org>"]
+description = "Virtual Library Card Creator"
+homepage = "https://thepalaceproject.org"
+name = "Virtual Library Card"
+readme = "README.md"
+repository = "https://github.com/ThePalaceProject/ virtual-library-card"
+version = "0" # Version number is managed with tags in git
+
+[tool.poetry.dependencies]
+certifi = "2020.12.5"
+crispy-forms-materialize = "0.2"
+datedelta = "1.3"
+Django = "3.1.13"
+django-absoluteuri = "1.3.0"
+django-appconf = "1.0.4"
+django-bootstrap4 = "2.3.1"
+django-compressor = "2.4"
+django-compressor-postcss = "0.8.2"
+django-crispy-forms = "1.10.0"
+django-htmlmin = "0.11.0"
+django-localflavor = "3.0.1"
+django-localflavor-us = "1.1"
+django-material = "1.7.4"
+django-materialize-css = "0.0.1"
+django-render-block = "0.8.1"
+django-sequences = "2.5"
+djangorestframework = "3.12.2"
+jinja2 = "2.11.3"
+libsass = "0.20.1"
+mysqlclient = "2.0.3"
+Pillow = "8.3.2"
+psycopg2-binary = "2.8.6"
+PyMySQL = "1.0.2"
+python = ">=3.7,<4"
+python-stdnum = "1.15"
+pytz = "2020.5"
+rcssmin = "1.0.6"
+requests = "2.25.1"
+rjsmin = "1.1.0"
+six = "1.12.0"
+smartystreets-python-sdk = "4.7.2"
+uwsgi = ">=2.0,<2.1"
+
+[tool.poetry.dev-dependencies]
+pre-commit = "~2.17"
