Unit test harness setup
* Unit test harness setup

Uses pytest and pytest-django configured via pyproject.toml
To run the tests, simply run `pytest` from the project root folder

* Ran "poetry update virtualenv" to fix the virtualenv package hash

Also code formatting through pre-commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,8 @@ uwsgi = ">=2.0,<2.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "~2.17"
+pytest = "^7.1.1"
+pytest-django = "^4.5.2"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "virtual_library_card.settings.dev"
