--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ smartystreets-python-sdk = "4.7.2"
 uwsgi = ">=2.0,<2.1"
 
 [tool.poetry.dev-dependencies]
+parameterized = "^0.8.1"
 pre-commit = "~2.17"
 pytest = "^7.1.1"
 pytest-django = "^4.5.2"
