Feature/user email verification
* Email verification workflow first pass

Completed:
- Send email during card_request flow
- Token creation for email
- Token validation logic
- Email verification logic
- Verification success/error/resend pages

Pending
- Resend logic
- On card request user should be disabled
- PIN test rejection for unverified users
- Better templates and language

* Verification email resend logic added

* Added headers to verification templates

* Link expiration information added to email template

* New line additions to html templates

* PINTEST API now fails for an unverified user

Added BASE_URL to the settings so that email with self referential links
that do not have access to a request are still function
Both forms and background tasks would not have access to a request object

* Made email comparison case-insensitive

Also updated the README with JWT_SECRET and BASE_URL usage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ libsass = "0.20.1"
 mysqlclient = "2.0.3"
 Pillow = "8.3.2"
 psycopg2-binary = "2.8.6"
+PyJWT = "^2.4.0"
 PyMySQL = "1.0.2"
 python = ">=3.7,<4"
 python-stdnum = "1.15"
