Google reCaptcha added to the card signup page
* Google reCaptcha added to the card signup page

Using the django-recaptcha library, so no new functionality
had to be written apart from the addition of the field

* Captcha added to unit tests

Captcha settings available in the settings/dev.py
are test credentials provided by google in their faq
https://developers.google.com/recaptcha/docs/faq#id-like-to-run-automated-tests-with-recaptcha.-what-should-i-do

* Captcha widget is loaded dynamically

In case the captcha app is not installed, the form will ignore captcha
The dependency on django-captcha still exists

* Updated README with captcha settings details

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ django-localflavor = "3.0.1"
 django-localflavor-us = "1.1"
 django-material = "1.7.4"
 django-materialize-css = "0.0.1"
+django-recaptcha = "^3.0.0"
 django-render-block = "0.8.1"
 django-sequences = "2.5"
 djangorestframework = "3.12.2"
