--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ repository = "https://github.com/ThePalaceProject/ virtual-library-card"
 version = "0" # Version number is managed with tags in git
 
 [tool.poetry.dependencies]
+attrs = "^22.1.0"
 certifi = "2020.12.5"
 crispy-forms-materialize = "0.2"
 datedelta = "1.3"
