--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ version = "0" # Version number is managed with tags in git
 
 [tool.poetry.dependencies]
 attrs = "^22.1.0"
+boto3 = "^1.24.82"
 certifi = "2020.12.5"
 crispy-forms-materialize = "0.2"
 datedelta = "1.3"
@@ -34,6 +35,7 @@ django-materialize-css = "0.0.1"
 django-recaptcha = "^3.0.0"
 django-render-block = "0.8.1"
 django-sequences = "2.5"
+django-storages = "^1.13.1"
 djangorestframework = "3.12.2"
 jinja2 = "2.11.3"
 libsass = "0.20.1"
