--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,11 @@ commands = pytest
 passenv = CI VLC_*
 docker =
     docker: db-vlc
+    docker: minio-vlc
 setenv =
     docker: VLC_DEV_DB_HOST=localhost
     docker: VLC_DEV_DB_PORT=9010
+    docker: VLC_DEV_AWS_S3_ENDPOINT_URL=http://localhost:9011
 allowlist_externals =
     poetry
 
@@ -26,6 +28,15 @@ ports =
 healthcheck_cmd = pg_isready
 healthcheck_interval = 5
 healthcheck_retries = 10
+
+[docker:minio-vlc]
+image = bitnami/minio:2022.3.3
+environment =
+    MINIO_ACCESS_KEY=vlc-minio
+    MINIO_SECRET_KEY=123456789
+    MINIO_DEFAULT_BUCKETS=vlc-test
+ports =
+    9011:9000/tcp
 
 [gh-actions]
 python =
