--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ image = bitnami/minio:2022.3.3
 environment =
     MINIO_ACCESS_KEY=vlc-minio
     MINIO_SECRET_KEY=123456789
-    MINIO_DEFAULT_BUCKETS=vlc-test
+    MINIO_DEFAULT_BUCKETS=vlc-test:download
 ports =
     9011:9000/tcp
 
