--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ version = "0" # Version number is managed with tags in git
 attrs = "^22.1.0"
 boto3 = "^1.26.7"
 certifi = "2020.12.5"
+chardet = "^5.0.0"
 crispy-forms-materialize = "0.2"
 datedelta = "1.3"
 Django = "3.2.16"
