--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ skipsdist = true
 [testenv]
 commands_pre =
     poetry install --without ci -v
-commands = pytest
+commands = pytest {tests:posargs}
 passenv = CI VLC_*
 docker =
     docker: db-vlc
