--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ django-localflavor-us = "1.1"
 django-material = "1.7.4"
 django-materialize-css = "0.0.1"
 django-recaptcha = "^3.0.0"
+django-rename-app = "^0.1.5"
 django-render-block = "0.9.2"
 django-sequences = "2.5"
 django-storages = "^1.13.1"
