Basic django file logging config
* Basic django file logging config

Removed the Logging class since the LOGGING config manages all settings

* Removed old style logging statements

* Run entrypoints python scripts as the "vlc" user

* Changed logging to be console logs only

* Added the log level to the docker-compose

Changed the django logs to always be INFO, since DEBUG is far too verbose
Added the log level env var to the README

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         condition: service_healthy
     environment:
       DJANGO_SETTINGS_MODULE: "virtual_library_card.settings.dev"
+      DJANGO_LOG_LEVEL: "DEBUG"
       VLC_DEV_DB_PORT: "5432"
       VLC_DEV_DB_HOST: "pg"
       VLC_DEV_AWS_S3_ENDPOINT_URL: "http://minio:9000"
