--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Install Poetry
         uses: ThePalaceProject/circulation/.github/actions/poetry@main
+        with:
+          version: "1.3.2"
 
       - name: Install Pre-commit
         run: |
