--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     # We want to run on external PRs, but not on our own internal PRs as they'll be run
     # by the push to the branch. This prevents duplicated runs on internal PRs.
@@ -29,6 +29,8 @@ jobs:
 
       - name: Install Poetry
         uses: ThePalaceProject/circulation/.github/actions/poetry@main
+        with:
+          version: "1.3.2"
 
       - name: Install Tox
         run: |
