--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ smartystreets-python-sdk = "4.11.9"
 uwsgi = ">=2.0,<2.1"
 
 [tool.poetry.group.ci.dependencies]
+dunamai = "^1.15.0"
 pre-commit = "~2.17"
 tox = "^3.26.0"
 tox-docker = "^3.1.0"
