--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ Django = "3.2.16"
 django-absoluteuri = "1.3.0"
 django-appconf = "1.0.5"
 django-bootstrap4 = "2.3.1"
-django-compressor = "2.4.1"
+django-compressor = "4.3.1"
 django-compressor-postcss = "0.8.2"
 django-crispy-forms = "1.14.0"
 django-htmlmin = "0.11.0"
@@ -40,7 +40,6 @@ django-sequences = "2.7"
 django-storages = "^1.13.1"
 djangorestframework = "3.14.0"
 jinja2 = "3.1.2"
-libsass = "0.22.0"
 Pillow = "9.3.0"
 psycopg2-binary = "2.9.5"
 PyJWT = "^2.6.0"
@@ -48,12 +47,10 @@ PyMySQL = "1.0.2"
 python = ">=3.8,<4"
 python-stdnum = "1.18"
 pytz = "2022.6"
-rcssmin = "1.0.6"
+pyuwsgi = ">=2.0,<2.1"
 requests = "2.28.1"
-rjsmin = "1.1.0"
 six = "1.16.0"
 smartystreets-python-sdk = "4.11.9"
-uwsgi = ">=2.0,<2.1"
 
 [tool.poetry.group.ci.dependencies]
 dunamai = "^1.15.0"
