--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,14 +30,15 @@ services:
       POSTGRES_DB: virtual_library_card_dev
 
   minio:
-    image: "bitnami/minio:2022.3.3"
+    image: "bitnami/minio:2023.2.27"
     ports:
       - "9000:9000"
       - "9001:9001"
     environment:
-      MINIO_ACCESS_KEY: "vlc-minio"
-      MINIO_SECRET_KEY: "123456789"
+      MINIO_ROOT_USER: "vlc-minio"
+      MINIO_ROOT_PASSWORD: "123456789"
       MINIO_DEFAULT_BUCKETS: "vlc-test:download"
+      MINIO_SCHEME: "http"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 5s
