--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ datedelta = "1.4"
 Django = "3.2.18"
 django-absoluteuri = "1.3.0"
 django-appconf = "1.0.5"
+django-autocomplete-light = "^3.9.4"
 django-bootstrap4 = "23.1"
 django-compressor = "4.3.1"
 django-compressor-postcss = "0.8.2"
