--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,10 @@ skipsdist = true
 [testenv]
 commands_pre =
     poetry install --without ci -v
-commands = pytest {tests:posargs}
-passenv = CI VLC_*
+commands = pytest {posargs:tests}
+passenv =
+    CI
+    VLC_*
 docker =
     docker: db-vlc
     docker: minio-vlc
