--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,11 +50,11 @@ pyuwsgi = ">=2.0,<2.1"
 requests = "^2.31"
 
 [tool.poetry.group.ci.dependencies]
-dunamai = "^1.16.0"
-pre-commit = "~3.3"
-tox = "^3.28.0"
-tox-docker = "^4.0.0"
-tox-gh-actions = "^2.12.0"
+dunamai = "^1.16"
+pre-commit = "^3.0"
+tox = "^4.5"
+tox-docker = "^4.0"
+tox-gh-actions = "^3.0"
 
 [tool.poetry.group.dev.dependencies]
 parameterized = "^0.9"
