--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ version = "0"  # Version number is managed with tags in git
 
 [tool.poetry.dependencies]
 attrs = "^23.1.0"
+better-profanity = "^0.7.0"
 boto3 = "^1.26.90"
 certifi = "2023.7.22"
 chardet = "^5.1.0"
