--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,18 @@ setenv =
     docker: VLC_DEV_DB_HOST=localhost
     docker: VLC_DEV_DB_PORT=9010
     docker: VLC_DEV_AWS_S3_ENDPOINT_URL=http://localhost:9011
+    COVERAGE_FILE = .coverage.{envname}
 allowlist_externals =
     poetry
+
+[testenv:report]
+skip_install = true
+commands =
+    coverage combine
+    coverage html
+allowlist_externals =
+    poetry
+    coverage
 
 [docker:db-vlc]
 image = postgres:12
