--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,5 +40,11 @@ jobs:
 
       - name: Run Tests
         run: tox
-        env:
-          MODULE: ${{ matrix.module }}
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          name: ${{ matrix.python-version }}
+          verbose: true
