--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ description = "Virtual Library Card Creator"
 homepage = "https://thepalaceproject.org"
 license = "Apache-2.0"
 name = "Virtual Library Card"
+packages = [
+    {include = "virtual_library_card"},
+    {include = "virtuallibrarycard"},
+]
 readme = "README.md"
 repository = "https://github.com/ThePalaceProject/virtual-library-card"
 version = "0"  # Version number is managed with tags in git
