--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ python-stdnum = "1.19"
 pytz = "^2023.2"
 pyuwsgi = ">=2.0,<2.1"
 requests = "^2.31"
+setuptools = "^69.1.0"
 
 [tool.poetry.group.ci.dependencies]
 dunamai = "^1.16"
