--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,6 @@ docker =
     docker: db-vlc
     docker: minio-vlc
 setenv =
-    docker: VLC_DEV_DB_HOST=localhost
-    docker: VLC_DEV_DB_PORT=9010
-    docker: VLC_DEV_AWS_S3_ENDPOINT_URL=http://localhost:9011
     COVERAGE_FILE = .coverage.{envname}
 allowlist_externals =
     poetry
@@ -35,8 +32,10 @@ environment =
     POSTGRES_USER=vlc
     POSTGRES_PASSWORD=test
     POSTGRES_DB=test_virtual_library_card_dev
-ports =
-    9010:5432/tcp
+expose =
+    VLC_DEV_DB_PORT=5432/tcp
+host_var =
+    VLC_DEV_DB_HOST
 healthcheck_cmd = pg_isready
 healthcheck_interval = 5
 healthcheck_retries = 10
@@ -47,8 +46,10 @@ environment =
     MINIO_ACCESS_KEY=vlc-minio
     MINIO_SECRET_KEY=123456789
     MINIO_DEFAULT_BUCKETS=vlc-test:download
-ports =
-    9011:9000/tcp
+expose =
+    VLC_DEV_AWS_S3_ENDPOINT_URL_PORT=9000/tcp
+host_var =
+    VLC_DEV_AWS_S3_ENDPOINT_URL_HOST
 
 [gh-actions]
 python =
