--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,8 @@ docker =
     docker: minio-vlc
 setenv =
     COVERAGE_FILE = .coverage.{envname}
+    PG_SSL_MODE = allow
+
 allowlist_externals =
     poetry
 
@@ -27,11 +29,12 @@ allowlist_externals =
     coverage
 
 [docker:db-vlc]
-image = postgres:12
+image = postgres:16
 environment =
     POSTGRES_USER=vlc
     POSTGRES_PASSWORD=test
     POSTGRES_DB=test_virtual_library_card_dev
+
 expose =
     VLC_DEV_DB_PORT=5432/tcp
 host_var =
