--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,7 @@ docker =
     docker: minio-vlc
 setenv =
     COVERAGE_FILE = .coverage.{envname}
-    PG_SSL_MODE = allow
-
+    VLC_DEV_DB_SSL_MODE = allow
 allowlist_externals =
     poetry
 
@@ -34,7 +33,6 @@ environment =
     POSTGRES_USER=vlc
     POSTGRES_PASSWORD=test
     POSTGRES_DB=test_virtual_library_card_dev
-
 expose =
     VLC_DEV_DB_PORT=5432/tcp
 host_var =
