--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,9 @@ version = "0"  # Version number is managed with tags in git
 
 [tool.poetry.dependencies]
 attrs = "^25.1.0"
+# Lets us use StrEnum for Python 3.10 and below
+# TODO: Remove this when we drop support for Python 3.10
+"backports.strenum" = {version = "^1.3.1", python = "<3.11"}
 better-profanity = "^0.7.0"
 boto3 = "^1.26.90"
 certifi = "2025.1.31"
@@ -103,7 +106,7 @@ jinja2 = "3.1.6"
 Pillow = "10.4.0"
 psycopg2-binary = "2.9.10"
 PyJWT = "^2.6.0"
-python = ">=3.8,<4"
+python = ">=3.10,<4"
 python-stdnum = "1.20"
 pytz = "^2025.1"
 pyuwsgi = ">=2.0,<2.1"
