Fix MinIO bucket creation for CI tests.
The bitnami/minio image was removed, requiring migration to the official
minio/minio image. The official image does not support the
MINIO_DEFAULT_BUCKETS environment variable, which caused test failures
due to missing buckets.

This change:
- Creates ci/minio/ directory with custom Dockerfile and entrypoint script
- Entrypoint script starts MinIO and creates the vlc-test bucket with
  download policy using MinIO Client (mc)
- Updates docker-compose.yml and tox.ini to reference the new build context
- Organizes CI dependencies separately from main application

--- a/tox.ini
+++ b/tox.ini
@@ -42,11 +42,7 @@ healthcheck_interval = 5
 healthcheck_retries = 10
 
 [docker:minio-vlc]
-image = bitnami/minio:2022.3.3
-environment =
-    MINIO_ACCESS_KEY=vlc-minio
-    MINIO_SECRET_KEY=123456789
-    MINIO_DEFAULT_BUCKETS=vlc-test:download
+dockerfile = {toxinidir}/ci/minio/Dockerfile
 expose =
     VLC_DEV_AWS_S3_ENDPOINT_URL_PORT=9000/tcp
 host_var =
