--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,14 +35,13 @@ services:
              -c ssl_key_file=/etc/ssl/private/ssl-cert-snakeoil.key
 
   minio:
-    image: "bitnami/minio:2023.2.27"
+    build:
+      dockerfile: Dockerfile
+      context: ci/minio
     ports:
       - "9000:9000"
       - "9001:9001"
     environment:
-      MINIO_ROOT_USER: "vlc-minio"
-      MINIO_ROOT_PASSWORD: "123456789"
-      MINIO_DEFAULT_BUCKETS: "vlc-test:download"
       MINIO_SCHEME: "http"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
