--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,12 +81,12 @@ attrs = "^25.1.0"
 "backports.strenum" = {version = "^1.3.1", python = "<3.11"}
 better-profanity = "^0.7.0"
 boto3 = "^1.26.90"
-certifi = "2025.8.3"
+certifi = "^2025.10.5"
 chardet = "^5.1.0"
 crispy-bootstrap4 = "^2025.6"
 crispy-forms-materialize = "0.2"
 datedelta = "1.4"
-Django = "^4.2.3"
+Django = "<5.0"
 django-absoluteuri = "1.3.0"
 django-appconf = "1.1.0"
 django-autocomplete-light = "^3.9.4"
@@ -102,7 +102,7 @@ django-materialize-css = "0.0.1"
 django-recaptcha = "^4.0.0"
 django-render-block = "0.11"
 django-storages = "^1.13.2"
-djangorestframework = "3.16.0"
+djangorestframework = "^3.16.0"
 jinja2 = "3.1.6"
 Pillow = "11.3.0"
 psycopg2-binary = "2.9.10"
@@ -126,7 +126,7 @@ django-stubs = {version = "^5.0.2", extras = ["compatible-mypy"]}
 mypy = "^1.7.0"
 parameterized = "^0.9"
 pytest = "^8.0.0"
-pytest-cov = "^6.1.1"
+pytest-cov = "^7.0.0"
 pytest-django = "^4.5.2"
 types-requests = "^2.28.11"
 
